--- a/Espanol/about-ES.html
+++ b/Espanol/about-ES.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <!--Style-->
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         
         <!--Fonts-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500;1,700&display=swap" 
