--- a/Espanol/index-ES.html
+++ b/Espanol/index-ES.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!--Style-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500;1,700&display=swap" 
@@ -54,14 +54,14 @@
                         <img src="img/icons/lang.png" alt="language" class="" with="30" height="30">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
-                        <li><a class="dropdown-item" href="Espanol/index-ES.html">Español</a></li>
+                        <li><a class="dropdown-item" href="/Espanol/index-ES.html">Español</a></li>
                         <li><a class="dropdown-item" href="index.html">English</a></li>
                         <li><a class="dropdown-item" href="index-IT.html">Italian</a></li>
                     </ul>
                 </div>
                 <!--Language Change Movile-->
                 <div class="lang-movil" id="lang-movil">
-                    <li><a class="dropdown-item" href="index-ES.html">ES</a></li>
+                    <li><a class="dropdown-item" href="/Espanol/index-ES.html">ES</a></li>
                     <li><a class="dropdown-item" href="index.html">EN</a></li>
                     <li><a class="dropdown-item" href="index-IT.html">IT</a></li>
                 </div>
@@ -74,26 +74,26 @@
             <div class="navbar-menu container collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav my-2 my-lg-0" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="index.html" class="nav-link">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="index-ES.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="about-EN.html" class="nav-link">About me</a>
+                        <a class="nav-link text-white" href="about-ES.html" class="nav-link">About me</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="portfolio-EN.html" 
+                        <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="portfolio-ES.html" 
                             id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Portfolio
                         </a> 
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="vertigo-EN.html">Vertigo</a></li>
-                            <li><a class="dropdown-item" href="cva-EN.html">CVA SA</a></li>
-                            <li><a class="dropdown-item" href="interieur-EN.html">Interieur Forma</a></li>
-                            <li><a class="dropdown-item" href="bikes-EN.html">Bikes Station</a></li>
-                            <li><a class="dropdown-item" href="coco-EN.html">Coconut Milk</a></li>
-                            <li><a class="dropdown-item" href="dandii-EN.html">Dandii</a></li>
-                            <li><a class="dropdown-item" href="renders-EN.html">3D models & Renders</a></li>
-                            <li><a class="dropdown-item" href="upa-EN.html">Upa!</a></li>
-                            <li><a class="dropdown-item" href="portfolio-EN.html">See All</a></li>
+                            <li><a class="dropdown-item" href="vertigo-ES.html">Vertigo</a></li>
+                            <li><a class="dropdown-item" href="cva-ES.html">CVA SA</a></li>
+                            <li><a class="dropdown-item" href="interieur-ES.html">Interieur Forma</a></li>
+                            <li><a class="dropdown-item" href="bikes-ES.html">Bikes Station</a></li>
+                            <li><a class="dropdown-item" href="coco-ES.html">Coconut Milk</a></li>
+                            <li><a class="dropdown-item" href="dandii-ES.html">Dandii</a></li>
+                            <li><a class="dropdown-item" href="renders-ES.html">3D models & Renders</a></li>
+                            <li><a class="dropdown-item" href="upa-ES.html">Upa!</a></li>
+                            <li><a class="dropdown-item" href="portfolio-ES.html">See All</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -149,7 +149,7 @@
                             a vast example of my work: simple sketches, complex prototypes and models.
                     </p>
                     <div class="button readMore">
-                        <a href="about-EN.html" class="button-v btn btn-primary">Know More</a>
+                        <a href="about-ES.html" class="button-v btn btn-primary">Know More</a>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                     <div class="row">
                         <div class="feat-item mb-md50 col-sm-6 col-lg-3">
                             <div class="text-center">
-                                <span class="icon "><img class= "icon lead" src="img/icons/Icon-2.svg" alt="3D cube"></span>
+                                <span class="icon "><img class= "icon lead" src="/img/icons/Icon-2.svg" alt="3D cube"></span>
                                 <h5>3D Modeling</h5>
                                 <h6>Solidworks - Inventors</h6>
                                 <p>Parametric drawing of products and their renderings</p>
@@ -175,7 +175,7 @@
                         </div>
                         <div class="feat-item mb-md50 col-sm-6 col-lg-3">
                             <div class="text-center">
-                                <span class="icon " ><img class= "icon lead" src="img/icons/Icon-3.svg" alt="blueprints"></span>
+                                <span class="icon " ><img class= "icon lead" src="/img/icons/Icon-3.svg" alt="blueprints"></span>
                                 <h5>Blueprint Drawing</h5>
                                 <h6>Autocad - Solidworks</h6>
                                 <p>Drawing up drawings of assemblies and their parts for their development</p>
@@ -183,7 +183,7 @@
                         </div>
                         <div class="feat-item mb-md50 col-sm-6 col-lg-3">
                             <div class="text-center">
-                                <span class="icon"><img class= "icon lead" src="img/icons/Icon-4.svg" alt="vector drawing"></span>
+                                <span class="icon"><img class= "icon lead" src="/img/icons/Icon-4.svg" alt="vector drawing"></span>
                                 <h5>Product Design</h5>
                                 <h6>UX - UI</h6>
                                 <p>Mockup / fireworks designs. Using Adobe Illustrator - Photoshop - XD</p>
@@ -191,7 +191,7 @@
                         </div>
                         <div class="feat-item mb-md50 col-sm-6 col-lg-3">
                             <div class="text-center">
-                                <span class="icon " ><img class= "icon lead" src="img/icons/Icon-1.svg" alt="pc screen"></span>
+                                <span class="icon " ><img class= "icon lead" src="/img/icons/Icon-1.svg" alt="pc screen"></span>
                                 <h5>Development</h5>
                                 <h6>Web & Mobile Development</h6>
                                 <p>Use of HTML, CSS and SCSS languages</p>
@@ -232,130 +232,130 @@
 
                     <div class="gallery-image">
                         <div class="each-item prototypes">
-                            <img class="port-image" src="img/Portfolio/vertigo/vertigo1-01.png" alt="Prototype of a window cleaner"/>
+                            <img class="port-image" src="/img/Portfolio/vertigo/vertigo1-01.png" alt="Prototype of a window cleaner"/>
                             <div class="cap1">
                                 <h3>Vertigo</h3>
                                 <p>Develop of a widnow cleanning</p>
                             </div>
                             <div class="cap2">
-                                <a href="vertigo-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                <a href="vertigo-ES.html" class="text-center"><p class="text-center">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image renders">
                         <div class="each-item metal renders">
-                            <img class="port-image " src="img/Portfolio/bikes/bicicletero-01.png" alt="Bicycle station with publicity for a city "/>
+                            <img class="port-image " src="/img/Portfolio/bikes/bicicletero-01.png" alt="Bicycle station with publicity for a city "/>
                             <div class="cap1">
                                 <h3>Bicycle Station</h3>
                                 <p>Desing and render for Montevide goverment (Uruguay)</p>
                             </div>
                             <div class="cap2">
-                                <a href="bikes-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                <a href="bikes-ES.html" class="text-center"><p class="text-center">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image renders">
                         <div class="each-item renders">
-                            <img class="port-image" src="img/Portfolio/cva/metalDesign/Metal-01.png" alt="3D product design of a metal box"/>
+                            <img class="port-image" src="/img/Portfolio/cva/metalDesign/Metal-01.png" alt="3D product design of a metal box"/>
                             <div class="cap1">
                                 <h3>Metal Designs</h3>
                                 <p>Laser cut metal and cnc creation</p>
                             </div>
                             <div class="cap2">
-                                <a href="cvaMetal-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                <a href="cvaMetal-ES.html" class="text-center"><p class="text-center">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image">
                         <div class="each-item">
-                            <img class="port-image" src="img/Portfolio/cva/exibition/Stand1-01.png" alt="Automechanika exibition in Buenos Aires for CVA SA"/>
+                            <img class="port-image" src="/img/Portfolio/cva/exibition/Stand1-01.png" alt="Automechanika exibition in Buenos Aires for CVA SA"/>
                             <div class="cap1">
                                 <h3 class="h3-mob">CVA SA</h3>
                                 <p class="p-mob">Exibtion Stand Design</p>
                             </div>
                             <div class="cap2">
-                                <a href="cva-EN.html" class="text-center"><p class="p-see-mob">See more</p></a>
+                                <a href="cva-ES.html" class="text-center"><p class="p-see-mob">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image">
                         <div class="each-item">
-                            <img class="port-image" src="img/Portfolio/Packaging-01.png" alt="Packaging for coconuts milk brand"/>
+                            <img class="port-image" src="/img/Portfolio/Packaging-01.png" alt="Packaging for coconuts milk brand"/>
                             <div class="cap1">
                                 <h3>Coconuts Milk</h3>
                                 <p>Design and develop of packaging</p>
                             </div>
                             <div class="cap2">
-                                <a href="coco-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                <a href="coco-ES.html" class="text-center"><p class="text-center">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image">
                         <div class="each-item">
-                            <img class="port-image" src="img/Portfolio/Render-01.png" alt="3D design model of a magic box for Steampunk style"/>
+                            <img class="port-image" src="/img/Portfolio/Render-01.png" alt="3D design model of a magic box for Steampunk style"/>
                             <div class="cap1">
                                 <h3>3D Modeling & Renders</h3>
                                 <p>Solidworks and keyshot</p>
                             </div>
                             <div class="cap2">
-                                <a href="renders-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                <a href="renders-ES.html" class="text-center"><p class="text-center">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image">
                         <div class="each-item">
-                            <img class="port-image" src="img/Portfolio/Stand-01.png" alt="Exibition stand for coconuts milk product"/>
+                            <img class="port-image" src="/img/Portfolio/Stand-01.png" alt="Exibition stand for coconuts milk product"/>
                             <div class="cap1">
                                 <h3>Coconuts Milk</h3>
                                 <p>Design of exibition stand</p>
                             </div>
                             <div class="cap2">
-                                <a href="coco-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                <a href="coco-ES.html" class="text-center"><p class="text-center">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image">
                         <div class="each-item">
-                            <img class="port-image" src="img/Portfolio/Uoa-01.png" alt="Design and funcional prototype of a babay carryt bag"/>
+                            <img class="port-image" src="/img/Portfolio/Uoa-01.png" alt="Design and funcional prototype of a babay carryt bag"/>
                             <div class="cap1">
                                 <h3>UPA!</h3>
                                 <p>Baby carring prototype</p>
                             </div>
                             <div class="cap2">
-                                <a href="upa-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                <a href="upa-ES.html" class="text-center"><p class="text-center">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image">
                         <div class="each-item">
-                            <img class="port-image" src="img/Portfolio/dandii/dandii-01.png" alt="3D design model of a magic box for Steampunk style"/>
+                            <img class="port-image" src="/img/Portfolio/dandii/dandii-01.png" alt="3D design model of a magic box for Steampunk style"/>
                             <div class="cap1">
                                 <h3  class="h3-mob">dandii</h3>
                                 <p class="p-mob">Fruit dryer for cocktails</p>
                             </div>
                             <div class="cap2">
-                                <a href="dandii-EN.html" class="text-center"><p class="p-see-mob">See more</p></a>
+                                <a href="dandii-ES.html" class="text-center"><p class="p-see-mob">See more</p></a>
                             </div>
                         </div>
                     </div>
 
                     <div class="gallery-image">
                         <div class="each-item">
-                            <img class="port-image" src="img/Portfolio/inter2.png" alt="Design and funcional prototype of a babay carryt bag"/>
+                            <img class="port-image" src="/img/Portfolio/inter2.png" alt="Design and funcional prototype of a babay carryt bag"/>
                             <div class="cap1">
                                 <h3>Furniture</h3>
                                 <p>Workstation with Knoll´s designs</p>
                             </div>
                             <div class="cap2">
-                                <a href="interieur-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                <a href="interieur-ES.html" class="text-center"><p class="text-center">See more</p></a>
                             </div>
                         </div>
                     </div>
