--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <img src="img/icons/lang.png" alt="language" class="" with="30" height="30">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
-                        <li><a class="dropdown-item" href="Espanol/index-ES.html">Español</a></li>
+                        <li><a class="dropdown-item" href="index-ES.html">Español</a></li>
                         <li><a class="dropdown-item" href="index.html">English</a></li>
                         <li><a class="dropdown-item" href="index-IT.html">Italian</a></li>
                     </ul>
