--- a/Espanol/index-ES.html
+++ b/Espanol/index-ES.html
@@ -123,7 +123,7 @@
             </div>
         </div>
     </nav>    
-    <!--=========FIN Menu=========-->
+    <!--========= FIN Menu=========-->
 
     <!--=========Cuerpo=========-->
     <main id="home">
@@ -149,7 +149,7 @@
                             de mis projectos: desde modelados 3D hasta complejos prototipos.
                     </p>
                     <div class="button readMore">
-                        <a href="../Espanol/about-ES.html" class="button-v btn btn-primary">Leer mas</a>
+                        <a href="../Espanol/about-ES.html" class="button-v btn btn-primary">Conocer mas</a>
                     </div>
                 </div>
             </div>
