--- a/about-EN.html
+++ b/about-EN.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <!--Style-->
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         
         <!--Fonts-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500;1,700&display=swap" 
@@ -54,16 +54,16 @@
                             <img src="img/icons/lang.png" alt="language" class="" with="30" height="30">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
-                            <li><a class="dropdown-item" href="index-ES.html">Español</a></li>
+                            <li><a class="dropdown-item" href="Espanol/about-ES.html">Español</a></li>
                             <li><a class="dropdown-item" href="index.html">English</a></li>
-                            <li><a class="dropdown-item" href="index-IT.html">Italian</a></li>
+                            <li><a class="dropdown-item" href="Italiano/about-IT.html">Italian</a></li>
                         </ul>
                     </div>
                     <!--Language Change Movile-->
                     <div class="lang-movil" id="lang-movil">
-                        <li><a class="dropdown-item" href="index-ES.html">ES</a></li>
+                        <li><a class="dropdown-item" href="Espanol/about-ES.html">ES</a></li>
                         <li><a class="dropdown-item" href="index.html">EN</a></li>
-                        <li><a class="dropdown-item" href="index-IT.html">IT</a></li>
+                        <li><a class="dropdown-item" href="Italiano/about-ES.html">IT</a></li>
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
