--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                         <img src="img/icons/lang.png" alt="language" class="" with="30" height="30">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
-                        <li><a class="dropdown-item" href="index-ES.html">Español</a></li>
+                        <li><a class="dropdown-item" href="Espanol/index-ES.html">Español</a></li>
                         <li><a class="dropdown-item" href="index.html">English</a></li>
                         <li><a class="dropdown-item" href="index-IT.html">Italian</a></li>
                     </ul>
                 </div>
                 <!--Language Change Movile-->
                 <div class="lang-movil" id="lang-movil">
-                    <li><a class="dropdown-item" href="index-ES.html">ES</a></li>
+                    <li><a class="dropdown-item" href="Espanol/index-ES.html">ES</a></li>
                     <li><a class="dropdown-item" href="index.html">EN</a></li>
                     <li><a class="dropdown-item" href="index-IT.html">IT</a></li>
                 </div>
