--- a/Espanol/about-ES.html
+++ b/Espanol/about-ES.html
@@ -39,7 +39,7 @@
     <link rel="shortcut icon" href="../img/icons/Icon-web.svg" type="image/x-icon">
 
     <!--Nombre de Pestana-->
-    <title>Sobre Mi</title>
+    <title>Sole Priano</title>
 
 </head>
 
@@ -80,7 +80,7 @@
                         <a class="nav-link text-white" href="../Espanol/about-ES.html" class="nav-link">Sobre mi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="../Espanol/portfolio-ES.html" 
+                        <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="" 
                             id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Portfolio
                         </a> 
@@ -123,7 +123,7 @@
             </div>
         </div>
     </nav>    
-    <!--=========FIN Menu=========-->
+    <!--========= FIN Menu=========-->
 
         <!--=========Cuerpo=========-->
         <main id="home container-fluid">
@@ -136,7 +136,7 @@
             <!--=======Breadcrumbs=======-->                          
             <nav aria-label="breadcrumb" class="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="index-ES.html">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Sobre mi</li>
                 </ol>
             </nav>          
@@ -151,9 +151,9 @@
                         <div class="col-lg-6">
                             <h3>Un poco de mi</h3>
                             <p>
-                                Naci en Argentina, alli me dedique a estudiar Diseño Industriall en la Universidad de Buenos. Siempre ame viajar y conocer otras culturas.
+                                Naci y creci en Buenos Aires, Argentina. Alli me dedique a estudiar Diseño Industriall en la Universidad de Buenos. Siempre ame viajar y conocer otras culturas.
                                 A principios de 2020 decidi aventurarme e irme a vivir a Dinamarca con la meta de estudiar y vivir el diseño escandinavo. Gracias a la pandemia, y mi curiosidad, 
-                                empece a estudiar online diseño de UX/UX y Web Development/fron end. Disfruto aprendiendo nuevas cosas todos los dias, especialmente lo relacionados a la
+                                empece a estudiar online diseño de UX/UX y Web Development/front end. Disfruto aprendiendo nuevas cosas todos los dias, especialmente lo relacionados a la
                                 tecnologia y las computadoras. Me encantan todas las ramas de mi profesión, desde bocetar, hasta el modelado 2D / 3D y la ,creación de prototipos. 
                                 En mi experiencia, no hay mayor alegría que ver un proyecto materializado. He trabajado en esta industria por más de seis años y el proceso creativo 
                                 nunca deja de sorprenderme. Mi portfolio incluye una amplia variedad de trabajos, bocetos hasta prototipos. ¡Gracias por tu visita!
