--- a/Espanol/index-ES.html
+++ b/Espanol/index-ES.html
@@ -80,7 +80,7 @@
                         <a class="nav-link text-white" href="../Espanol/about-ES.html" class="nav-link">Sobre mi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="../Espanol/portfolio-ES.html" 
+                        <a class="nav-link dropdown-toggle dropdown-toggle-split text-white" href="" 
                             id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Portfolio
                         </a> 
@@ -144,9 +144,9 @@
                 </div>
                 <div class="row">
                     <p class="parra">
-                        Hola! Soy <strong class="sole">Sole</strong>, soy una diseñadora indutrial quien ama
-                            los desafito de todos los dias. Este es mi portfolio donde encontraras algunos  
-                            de mis projectos: desde modelados 3D hasta complejos prototipos.
+                        Hola! Soy <strong class="sole">Sole</strong>, soy una diseñadora indutrial creativa e inquieta
+                        quien ama los desafios de todos los dias. Este es mi portfolio donde encontraras algunos  
+                        de mis projectos: desde modelados 3D hasta complejos prototipos.
                     </p>
                     <div class="button readMore">
                         <a href="../Espanol/about-ES.html" class="button-v btn btn-primary">Conocer mas</a>
@@ -170,7 +170,7 @@
                                 <span class="icon "><img class= "icon lead" src="../img/icons/Icon-2.svg" alt="icono de cubo 3D"></span>
                                 <h5>Modelado 3D</h5>
                                 <h6>Solidworks - Inventors</h6>
-                                <p>Modelado parametrico de productos y renders</p>
+                                <p>Modelado paramétrico de productos y renders</p>
                             </div>
                         </div>
                         <div class="feat-item mb-md50 col-sm-6 col-lg-3">
@@ -178,7 +178,7 @@
                                 <span class="icon"><img class= "icon lead" src="../img/icons/Icon-3.svg" alt="icono de plano"></span>
                                 <h5>Representación gráfica</h5>
                                 <h6>Autocad - Solidworks</h6>
-                                <p>Dibujo de planos de piezas y sus ensambles para desarrollo</p>
+                                <p>Dibujo de planos de piezas, y sus ensambles, para desarrollo</p>
                             </div>
                         </div>
                         <div class="feat-item mb-md50 col-sm-6 col-lg-3">
@@ -293,7 +293,7 @@
 
                     <div class="gallery-image">
                         <div class="each-item">
-                            <img class="port-image" src="../img/Portfolio/Render-01.png" alt="3D design model of a magic box for Steampunk style"/>
+                            <img class="port-image" src="../img/Portfolio/Render-01.png" alt="Modelado 3d de artefacto steampunk en Solidworks"/>
                             <div class="cap1">
                                 <h3>3D Modeling & Renders</h3>
                                 <p>Solidworks and keyshot</p>
