--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
                         <li><a class="dropdown-item" href="Espanol/index-ES.html">Español</a></li>
                         <li><a class="dropdown-item" href="index.html">English</a></li>
-                        <li><a class="dropdown-item" href="index-IT.html">Italian</a></li>
+                        <li><a class="dropdown-item" href="Italiano/index-IT.html">Italian</a></li>
                     </ul>
                 </div>
                 <!--Language Change Movile-->
                 <div class="lang-movil" id="lang-movil">
                     <li><a class="dropdown-item" href="Espanol/index-ES.html">ES</a></li>
                     <li><a class="dropdown-item" href="index.html">EN</a></li>
-                    <li><a class="dropdown-item" href="index-IT.html">IT</a></li>
+                    <li><a class="dropdown-item" href="Italiano/index-IT.html">IT</a></li>
                 </div>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
